# tftpserver

./: .gitignore  CMakeLists.txt  README.md
common/include/: common.hpp
data/: nf.txt  nowy.txt  plik.txt  test.txt
server/include/: server.hpp
server/src/: main.cpp  main_server.cpp  server  server.cpp
tests/: test_core.py  test_errors.py
